<resources>
    <string name="app_name">Pulse</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Pulse &#8482;</string>

    <string name="on_boarding_1">We are going to start sensing your surroundings</string>
    <string name="on_boarding_2">We have found some Issues around your area</string>

    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="choose_picture_title">Choose picture</string>
    <string name="take_picture">Take picture</string>
    <string name="cd_issue_image">Image documenting the issue</string>
    <string name="issue_title">Issue Title</string>
    <string name="issue_category">Issue Category</string>
    <string name="issue_creator">Issue Creator</string>
    <string name="issue_fixer">Issue Fixer</string>
    <string name="issue_priority">Issue Priority</string>
    <string name="issue_upvotes">Issue Upvotes</string>
    <string name="issue_downvotes">Issue Downvotes</string>
    <string name="issue_createDate">Issue Create Date</string>
    <string name="issue_fixedDate">Issue Fixed Date</string>
    <string name="issue_fixedInd">Issue Fixed Indicator</string>

    <string name="welcome_message">Welcome to</string>
    <string name="slogan">A different way to Sense your surroundings</string>
    <string name="login_with">Login with</string>
    <string name="google_singin">Sign in with Google</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="report_issue_text">Help to improve your community by reporting what is wrong!</string>

    <string name="menu_my_account">My Account</string>
    <string name="menu_upvoted_issues">My UpVoted Issues</string>
    <string name="menu_completed_issues">Completed Issues</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="message_no_resolved_items">Uh Oh!\nIt doesn\'t appear any issues have been resolved in your area. Please submit any issues you see and check back later!</string>
    <string name="upvote">UPVOTE</string>
    <string name="downvote">DOWNVOTE</string>

    <string name="hint_report_title">Title</string>
    <string name="hint_report_description">Description</string>
    <string name="hint_report_category">Category</string>
    <string name="upload_picture">Upload Photo</string>

    <string name="error_enter_title">Please enter a Title</string>
    <string name="error_enter_description">Please enter a Description</string>
    <string name="select_image">SELECT AN IMAGE</string>

    <string name="parse_application_id" translatable="false">lX4BdYdc3BBclPisuzcCdtDxpFr2K5d0Z5y9O2FM</string>
    <string name="parse_client_id" translatable="false">WadGfNQSXAKqV8GbZ0LNYNxejHIgqC40r5XxeLoh</string>
    <string name="title_activity_maps">Map</string>
</resources>
